# verilator

./: .bake.toml  .clang-format  .clang-tidy  .codacy.yml  .codecov.yml  .cvsignore  .gitattributes  .gitignore  .pre-commit-hooks.yaml  .style.yapf  .travis.yml  AGENTS.md  BROKEN_LINK_FIX.md  CITATION.cff  CMakeLists.txt  CPPLINT.cfg  Changes  FIXME  MANIFEST.SKIP  Makefile.in  README  README.adoc  README.md  README.pod  README.rst  REUSE.toml  TODO  Vt_case_reducer_replay_mock.cpp  codecov.yml  configure.ac  configure.in  doxygen-mainpage  doxygen.config  install-sh  internals.pod  mkinstalldirs  python-dev-requirements.txt  python-requirements.txt  readme.pod  readme.texi  (+9 more)
.github/: dependabot.yml  (+2 more)
examples/cmake_hello_c/: CMakeLists.txt  Makefile
examples/cmake_hello_sc/: CMakeLists.txt  Makefile
examples/cmake_protect_lib/: CMakeLists.txt  Makefile
examples/cmake_python/: CMakeLists.txt  Makefile  sim_main.py
examples/cmake_tracing_c/: .gitignore  CMakeLists.txt  Makefile
examples/python/: .gitignore  CMakeLists.txt  add.v  pyexample.cpp  test_example.py
src/: .cvsignore  .gdbinit  .gdbinit.py  .gitignore  0CodeNotes.pod  AGENTS.md  CMakeLists.txt  Makefile.in  Makefile_obj.in  V3Active.cpp  V3Active.h  V3ActiveTop.cpp  V3ActiveTop.h  V3Alias.cpp  V3Alias.h  V3Assert.cpp  V3Assert.h  V3AssertCtl.cpp  V3AssertCtl.h  V3AssertNfa.cpp  V3AssertNfa.h  V3AssertPre.cpp  V3AssertPre.h  V3AssertProp.cpp  V3AssertProp.h  V3AssertProperties.cpp  V3AssertProperties.h  V3Ast.cpp  V3Ast.h  V3AstAttr.h  V3AstConstOnly.h  V3AstInlines.h  V3AstNodeCover.h  V3AstNodeDType.h  V3AstNodeExpr.h  V3AstNodeFuncCov.cpp  V3AstNodeFuncCov.h  V3AstNodeMath.h  V3AstNodeOther.h  V3AstNodeStmt.h  (+446 more)
src/runtime/: .gitignore  Makefile_obj.mk.in
test_regress/: .cvsignore  .gdbinit  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  Makefile_obj  driver.pl  driver.py  input.vc  input.xsim.vc  profile.vlt  tsan.supp  vcd_to_saif.py  vgen.pl
test_regress/t/: .gitattributes  TestCheck.h  TestSimulator.h  TestVpi.h  TestVpiHierarchyMain.cpp  TestVpiMain.cpp  bootstrap.pl  coverage_common.py  coverage_covergroup_common.py  fsm_test_guide.md  t_0.py  t_0.v  t_89704_parameter_error.v  t_90958_unpacked_array_assignment_bad.out  t_90958_unpacked_array_assignment_bad.v  t_90958_unpacked_array_error.v  t_BUG.v  t_EXAMPLE.pl  t_EXAMPLE.v  t_ISSUE4850.v  t_a1_first_cc.pl  t_a1_first_cc.py  t_a1_first_cc.v  t_a2_first_sc.pl  t_a2_first_sc.py  t_a3_selftest.pl  t_a3_selftest.py  t_a3_selftest_thread.pl  t_a3_selftest_thread.py  t_a4_examples.pl  t_a5_attributes_include.pl  t_a5_attributes_include.py  t_a5_attributes_src.pl  t_a5_attributes_src.py  t_a6_examples.py  t_a7_hier_block_cmake.py  t_a_first_cc.pl  t_a_first_sc.pl  t_aggregate_dtype_compare.v  t_aggregate_dtype_compare_bad.out  (+11440 more)
test_regress/t/saif_tests/: t_hier_block_sc_trace_saif.py  t_hier_block_trace_saif.py  t_timing_trace_saif.py  t_trace_abort_saif.py  t_trace_array_saif.py  t_trace_array_saif_portable_sc.py  t_trace_array_saif_sc.py  t_trace_array_saif_threads_1.py  t_trace_array_saif_threads_1_sc.py  t_trace_array_saif_threads_2.py  t_trace_ascendingrange_saif_sc.py  t_trace_complex_params_saif.py  t_trace_complex_params_saif_sc.py  t_trace_complex_saif_sc.py  t_trace_complex_saif_threads_2_sc.py  t_trace_complex_structs_saif.py  t_trace_complex_structs_saif_sc.py  t_trace_counter_saif.py  t_trace_dumpvars_dyn_saif_1.py  t_trace_enum_saif.py  t_trace_event_saif.py  t_trace_jumps_do_while_saif.py  t_trace_param_saif.py  t_trace_primitive_saif.py  t_trace_primitive_saif_sc.py  t_trace_saif.py  t_trace_saif_cmake.py  t_trace_saif_sc.py  t_trace_string_saif.py  t_trace_two_dumpsaif_cc.py  t_trace_two_portsaif_cc.py
test_regress/t/t_0_uvm_dpi/: uvm_common.c  uvm_dpi.cc  uvm_dpi.h  uvm_dpi.svh  uvm_hdl.c  uvm_hdl.svh  uvm_hdl_polling.c  uvm_hdl_questa.c  uvm_hdl_vcs.c  uvm_hdl_xcelium.c  uvm_polling_dpi.svh  uvm_regex.cc  uvm_regex.svh  uvm_svcmd_dpi.c  uvm_svcmd_dpi.svh
test_regress/t/t_config_libmap/: lib.map  m1.v  m2.sv  m3.vg  m5.v  x4.v
test_regress/t/t_config_libmap/sub/: other.sv
test_regress/t/t_dist_attributes/: mt_disabled.cpp  mt_disabled.h  mt_enabled.cpp  mt_enabled.h
test_regress/t/t_flag_relinc_dir/chip/: t_flag_relinc_sub.v
test_regress/t/t_flag_relinc_dir/include/: t_flag_relinc.vh
test_regress/t/t_hier_block_cmake/: CMakeLists.txt  main.cpp
test_regress/t/t_hier_block_import/: t_hier_block_import.vh  t_hier_block_import_args.vc  t_hier_block_import_def.vh  t_hier_block_import_deps.F  t_hier_block_import_subA.v  t_hier_block_import_subB.v  t_hier_block_import_subsub.v
test_regress/t/t_hier_trace_sub/: sub.F  sub.vc  t_hier_trace.vlt  t_hier_trace_sub.v  top.F  top.vc
test_regress/t/t_preproc_resolve/: submod.sv
test_regress/t/t_sv_bus_mux_demux/: sv_bus_mux_demux_def.sv  sv_bus_mux_demux_demux.sv  sv_bus_mux_demux_mux.sv  sv_bus_mux_demux_wrap.sv
test_regress/t/t_sv_cpu_code/: ac.sv  ac_ana.sv  ac_dig.sv  adrdec.sv  chip.sv  cpu.sv  genbus_if.sv  pad_gnd.sv  pad_gpio.sv  pad_vdd.sv  pads.sv  pads_h.sv  pads_if.sv  pinout_h.sv  ports.sv  ports_h.sv  program_h.sv  rom.sv  timescale.sv
test_regress/t/t_trace_hier_sub/: sub.vc  t_trace_hier.vlt  t_trace_hier_sub.v
test_regress/t/tsub/: t_flag_f_tsub.v  t_flag_f_tsub.vc  t_flag_f_tsub_inc.v
test_regress/t/uvm/: uvm_pkg_all.svh  uvm_pkg_all_v2017_1_0_dpi.svh  uvm_pkg_all_v2017_1_0_nodpi.svh  uvm_pkg_all_v2020_3_1_dpi.svh  uvm_pkg_all_v2020_3_1_nodpi.svh  uvm_pkg_todo.svh
test_regress/t/uvm/dpi/: uvm_common.c  uvm_dpi.cc  uvm_dpi.h  uvm_hdl.svh  uvm_svcmd_dpi.c  uvm_svcmd_dpi.svh
test_regress/t/uvm/dpi_v2017_1_0/: uvm_hdl_verilator.c
test_regress/t/uvm/dpi_v2020_3_1/: uvm_dpi.h  uvm_regex.cc
test_regress/t/uvm/v2017_1_0/dpi/: uvm_dpi.h  uvm_dpi.svh  uvm_hdl.c  uvm_hdl.svh  uvm_hdl_verilator.c  uvm_regex.cc  uvm_regex.svh
test_regress/t/uvm/v2020_3_1/dpi/: .clang-format  uvm_common.c  uvm_dpi.cc  uvm_dpi.h  uvm_dpi.svh  uvm_hdl.c  uvm_hdl.svh  uvm_hdl_polling.c  uvm_hdl_verilator.c  uvm_polling_dpi.svh  uvm_regex.svh  uvm_svcmd_dpi.c  uvm_svcmd_dpi.svh
(+427 files in other folders)
